<resources>

    <string name="app_name">Расписание</string>
    <string name="action_settings">Settings</string>
    <string name="service_name">Schedule service</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>


    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>

    <string name="push_button_title">Уведомления</string>
    <string name="note_notify_title">Новое замечание</string>
    <string name="change_notify_title">Изменение в расписании</string>
    <string name="pleas_wait">Пожайлуста, подождите</string>
    <string name="error_create_note">Возникли проблемы при создании замечания</string>

    <string name="hello_world">Hello world!</string>
    <string name="select_faculty">Выберите факультет:</string>
    <string name="select_specialty">Выберите специальность:</string>
    <string name="select_course">Выберите курс:</string>
    <string name="select_group">Выберите группу:</string>
    <string name="title_activity_group_selection">GroupSelectionActivity</string>
    <string name="title_activity_main_activity_new">MainActivityNew</string>
    <string name="btnStudentName">Студент</string>
    <string name="btnTeacherName">Преподаватель</string>
    <string name="btnStewardName">Староста</string>
    <string name="enter">Вход</string>

    <string name="cancel">Отменена</string>
    <string name="class_leader">Староста</string>
    <string name="input_note_text_hint">Введите сообщение...</string>
    <string name="create_note_activity_title">Новая заметка</string>
    <string name="notes_list_activity_title">Изменения</string>
    <string name="action_save">Сохранить</string>
    <string name="empty_note_hint">Заметка не может быть пустой</string>
    <string name="no_internet_connection">Нет соединения с интернетом</string>
    <string name="invalid_password_or_login">Неверный логин или пароль</string>
    <string name="title_activity_activity_lesson_details">activity_lesson_details</string>
    <string name="title_activity_activity_teacher_selection">Преподаватели</string>


    <string name="lesson_details_page_title">Занятие</string>
    <string name="lesson_create_page_title">Создание занятия</string>
    <string name="lesson_edit_page_title">Редактироваие занятия</string>

    <string name="lesson_type_practice">Практика</string>
    <string name="lesson_type_lection">Лекция</string>

    <string name="lesson_housing_first">I</string>
    <string name="lesson_housing_second">II</string>
    <string name="lesson_housing_third">III</string>
    <string name="lesson_housing_fourth">IV</string>
    <string name="lesson_housing_fifth">V</string>

    <string name="lesson_status_normal">Будет проведена</string>
    <string name="lesson_status_cancelled">Отменена</string>

    <string name="lesson_time_first">08:00 - 09:35</string>
    <string name="lesson_time_second">09:45 - 11:20</string>
    <string name="lesson_time_third">11:30 - 13:05</string>
    <string name="lesson_time_fourth">13:30 - 15:05</string>
    <string name="lesson_time_fifth">15:15 - 16:50</string>
    <string name="lesson_time_sixth">17:00 - 18:35</string>
    <string name="lesson_time_seventh">18:48 - 20:20</string>

    <string name="notifications_title">Уведомления</string>
    <string name="exit_button_title">Выйти</string>

    <string name="no_lessons">Занятий нет</string>
    <string name="teacher_not_set">Учитель не указан</string>
    <string name="teacher_field_hint">Не выбрано</string>
    <string name="title_not_set">Название предмета не указано</string>
    <string name="lesson_details_teacher_textview">Преподаватель</string>
    <string name="lesson_details_audience_textview">Аудитория</string>
    <string name="lesson_details_corps_textview">Корпус</string>
    <string name="lesson_details_time_textview">Время</string>
    <string name="lesson_details_type_textview">Тип занятия</string>
    <string name="lesson_details_status_textview">Статус</string>

    <string name="lesson_details_title_hint">Предмет</string>
    <string name="lesson_details_audience_hint">Аудитория</string>
    <string name="error_create_change">Возникла проблема при создании изменения</string>

    <string name="lesson_details_add_mark_button_text">Добавить заметку</string>




</resources>
