<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.anna.shedule.GroupSelectionActivity"
    android:background="#ffe1dfcd">

    <TextView
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:text="@string/select_faculty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:gravity="left"
        android:textColor="@android:color/black" />

    <Spinner
        android:id="@+id/facultySpiner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/select_specialty"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:gravity="left"/>

    <Spinner
        android:id="@+id/specialtySpiner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/select_course"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:gravity="left"/>

    <Spinner
        android:id="@+id/courseSpiner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/select_group"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:gravity="left"/>

    <Spinner
        android:id="@+id/groupSpiner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"/>

</LinearLayout>
