<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/color_background_activity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    android:orientation="vertical">

    <ImageView
        android:layout_width="164dp"
        android:layout_height="164dp"
        android:background="@drawable/rectangle_rounded_all_blue"
        android:src="@drawable/start"
        android:id="@+id/logo"
        android:layout_marginTop="84dp"
        android:layout_gravity="center_horizontal"
        android:padding="15dp" />

    <Button
        android:id="@+id/btnStudent"
        android:layout_width="158dp"
        android:layout_height="36dp"
        android:background="@drawable/rectangle_rounded_all_red_for_buttons"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="78dp"
        android:text="@string/btnStudentName"
        android:singleLine="true" />
        <!--android:textSize="12dp"-->

    <Button
        android:id="@+id/btnTeacher"
        android:layout_width="158dp"
        android:layout_height="36dp"
        android:background="@drawable/rectangle_rounded_all_blue_for_buttons"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/btnTeacherName"
        android:singleLine="true" />
        <!--android:textSize="12dp"-->

    <Button
        android:id="@+id/btnSteward"
        android:layout_width="158dp"
        android:layout_height="35dp"
        android:background="@drawable/rectangle_rounded_all_blue_for_buttons"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/btnStewardName"
        android:singleLine="true" />
        <!--android:textSize="12dp"-->
</LinearLayout>
